Spacing fixes

--- a/src/scss/Plugins/Community/settingsSearch.scss
+++ b/src/scss/Plugins/Community/settingsSearch.scss
@@ -11,7 +11,7 @@
 
 		.is-mobile.is-phone & {
 			padding: unset;
-			margin: var(--size-4-1);
+			margin: var(--size-4-1) 0;
 		}
 	}
 
