--- a/src/scss/Plugins/Core/outgoingLinkBacklinks.scss
+++ b/src/scss/Plugins/Core/outgoingLinkBacklinks.scss
@@ -16,6 +16,8 @@
 	}
 
 	> .tree-item-self {
+		padding-top: var(--size-4-1);
+		padding-bottom: var(--size-4-1);
 		padding-left: var(--size-4-6);
 		margin-bottom: -1px;
 		background-color: var(--background-secondary);
@@ -82,11 +84,11 @@
 		padding: var(--size-4-1);
 		pointer-events: auto;
 		background: var(--background-secondary-blur);
+		-webkit-backdrop-filter: blur(var(--blur-intensity));
+		backdrop-filter: blur(var(--blur-intensity));
 		border: var(--window-border);
 		border-radius: var(--radius-m);
 		box-shadow: var(--shadow-l);
-		-webkit-backdrop-filter: blur(var(--blur-intensity));
-		backdrop-filter: blur(var(--blur-intensity));
 	}
 }
 
