--- a/src/scss/User Interface/Sidebar/navHeader.scss
+++ b/src/scss/User Interface/Sidebar/navHeader.scss
@@ -81,13 +81,13 @@
 .pt-nav-header-right-sidebar-position-bottom .workspace-split.mod-right-split {
 	.nav-header {
 		position: absolute;
-		bottom: calc(var(--size-2-3) + var(--scroll-bar-size));
+		bottom: calc(var(--size-2-2) + var(--scroll-bar-size));
 		z-index: var(--layer-popover);
 		order: 10;
 		width: -webkit-fill-available;
 		width: fill-available;
 		height: unset;
-		padding: 0 calc(var(--size-2-3) + var(--scroll-bar-size)) 0 var(--size-2-3);
+		padding: 0 calc(var(--size-2-2) + var(--scroll-bar-size)) 0 var(--size-2-2);
 		pointer-events: none;
 		background-color: unset;
 		border-bottom: unset;
