--- a/src/scss/User Interface/settings.scss
+++ b/src/scss/User Interface/settings.scss
@@ -275,6 +275,11 @@ img.community-theme-lightbox {
 		margin-bottom: var(--size-4-1);
 		border-bottom: 1px solid var(--window-border-color);
 	}
+
+	+ div > .setting-item-heading,
+	+ .setting-item-heading {
+		margin-top: var(--size-4-1);
+	}
 }
 
 .setting-item-name {
